Implemente algoritmo Backtracking.