@@ -2,15 +2,16 @@ package com.programacion3.adoptme.controller;
 
 import com.programacion3.adoptme.dto.PathResponse;
 import com.programacion3.adoptme.dto.TspResponse;
+import com.programacion3.adoptme.service.BnBService;
 import com.programacion3.adoptme.service.GraphLoader;
 import com.programacion3.adoptme.service.ShortestPathService;
-import com.programacion3.adoptme.service.TspService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/routes")
@@ -19,7 +20,7 @@ public class RoutesController {
 
     private final ShortestPathService shortestPathService;
     private final GraphLoader graphLoader;
-    private final TspService tspService;
+    private final BnBService bnbService;
 
     /**
      * Dijkstra - Encuentra el camino más corto considerando distancias
@@ -30,30 +31,21 @@ public class RoutesController {
             @RequestParam String from,
             @RequestParam String to
     ) {
-        // Validaciones
         if (from == null || to == null || from.isBlank() || to.isBlank()) {
             return ResponseEntity.badRequest()
                     .body(new PathResponse(false, "Dijkstra", null, 0, 0.0));
         }
 
         // Cargar aristas con pesos desde Neo4j
-        var edges = graphLoader.loadWeightedEdges();
+        List<ShortestPathService.Edge> edges = graphLoader.loadWeightedEdges();
 
         // Ejecutar Dijkstra
         var result = shortestPathService.shortestPath(from, to, edges);
 
-        // Si no hay camino
         if (result.path.isEmpty() || Double.isInfinite(result.cost)) {
-            return ResponseEntity.ok(new PathResponse(
-                    false,
-                    "Dijkstra",
-                    null,
-                    0,
-                    0.0
-            ));
+            return ResponseEntity.ok(new PathResponse(false, "Dijkstra", null, 0, 0.0));
         }
 
-        // Respuesta exitosa
         return ResponseEntity.ok(new PathResponse(
                 true,
                 "Dijkstra",
@@ -64,26 +56,35 @@ public class RoutesController {
     }
 
     /**
-     * TSP con Branch & Bound - TODO: Implementar en Fase 2
-     * GET /routes/tsp/bnb?nodes=A,B,C,H
+     * TSP Branch & Bound
+     * GET /routes/tsp/bnb?nodes=A,B,C,D
      */
     @GetMapping("/tsp/bnb")
-    
     public ResponseEntity<TspResponse> tspBranchBound(
             @RequestParam String nodes
     ) {
         if (nodes == null || nodes.isBlank()) {
-            return ResponseEntity.badRequest().build();
+            return ResponseEntity.badRequest()
+                    .body(TspResponse.builder().route(null).totalDistanceKm(0).build());
         }
 
-        // Parsear los nodos de la query string
         List<String> nodeList = Arrays.stream(nodes.split(","))
                 .map(String::trim)
-                .toList();
+                .collect(Collectors.toList());
 
-        // Ejecutar algoritmo Branch & Bound
-        TspResponse result = tspService.solveTsp(nodeList);
+        List<ShortestPathService.Edge> edges = graphLoader.loadWeightedEdges();
 
-        return ResponseEntity.ok(result);
+        List<BnBService.Edge> bnbEdges = edges.stream()
+                .map(e -> new BnBService.Edge(e.from, e.to, e.weight))
+                .collect(Collectors.toList());
+
+        BnBService.Result result = bnbService.solveTSP(nodeList, bnbEdges);
+
+        return ResponseEntity.ok(
+                TspResponse.builder()
+                        .route(result.getRoute())
+                        .totalDistanceKm((int) Math.round(result.getTotalDistance()))
+                        .build()
+        );
     }
 }
